get user details API added
